# doc-rag

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
docs/: DFD.md  EVAL.md  MCP.md  PLAN.md  PRD.md  RESEARCH.md  RFC.md  THINK.md  USECASES.md
mobile/: README.md  app.json  package.json  tailwind.config.js
mobile/app/: _layout.tsx
mobile/app/(tabs)/: _layout.tsx  index.tsx  settings.tsx
mobile/app/chat/: [id].tsx
mobile/lib/: api.ts  store.ts  types.ts
src/doc_rag/: __init__.py  config.py
src/doc_rag/api/: main.py
src/doc_rag/mcp/: server.py
streamlit_app/: app.py
tests/: test_smoke.py
