[project]
name = "doc-rag"
version = "0.1.0"
description = "Production-grade RAG over technical documentation — hybrid + rerank + prompt cache + evals + MCP"
authors = [{ name = "Rushil Kaul", email = "theruka007@outlook.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.28",
    "rich>=13.9",
    "typer>=0.13",
    "anthropic>=0.40",
    "voyageai>=0.3",
    "cohere>=5.13",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "numpy>=2.1",
]

[project.optional-dependencies]
ingest = [
    "docling>=2.8",
    "llama-index-core>=0.12",
    "beautifulsoup4>=4.12",
]
local = [
    "sentence-transformers>=3.3",  # BGE-M3 fallback
    "FlagEmbedding>=1.3",
]
eval = [
    "ragas>=0.2",
    "datasets>=3.0",
]
demo = [
    "streamlit>=1.40",
]
mcp = [
    "mcp>=1.0",
]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/doc_rag"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --cov=doc_rag"
